# iqtools

./: .gitignore  404.html  CITATION.cff  LICENSE.md  README.md  aboutdialog.ui  aboutdialog_ui.py  asciidata.py  csvdata.py  esr_frequency_tracker.py  esr_frequency_tracker_1.ipynb  esr_frequency_tracker_2.ipynb  eta.ipynb  eta.py  gui_rc.py  icon.icns  index.html  iq_suite_rc.py  iqbase.py  iqdata.py  iqgui.py  iqgui.spec  iqtdata.py  iqtools.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py  matplotlibwidget.py  mkdocs.yml  objects.inv  pyTDMS.py  pyproject.toml  rawdata.py  read_tiq.py  requirements.txt  setup.cfg  setup.py  setup_mac.py  setup_osx.py  setup_win.py  (+10 more)
doc/: beam_vs_time.ipynb  example_usage.ipynb  iqtools_example.ipynb  quick_introduction_iq_suite.ipynb  quick_introduction_iqtools.ipynb  rootpy_iqtools_example.ipynb
docs/: examples.md  index.md  iqgui.md  overview.md
docs/references/: bindata.md  csvdata.md  grdata.md  iqbase.md  iqtdata.md  lcdata.md  plotters.md  r3fdata.md  tcapdata.md  tiqdata.md  tools.md  wavdata.md  xdatdata.md
examples/: index.html  quick_introduction_iqtools.ipynb  rootpy_iqtools_example.ipynb
files/: p_400_MeV_u_332_uA_0.npy
iqgui/: __main__.py  aboutdialog_ui.py  index.html  mainwindow.py  mainwindow_ui.py  matplotlibwidget.py
iqgui/rsrc/: aboutdialog.ui  gui.qrc  mainwindow.ui
iqtools/: __init__.py  __main__.py  asciidata.py  bindata.py  csvdata.py  grdata.py  iqbase.py  iqtdata.py  lcdata.py  plotters.py  r3fdata.py  rawdata.py  tcapdata.py  tdmsdata.py  tiqdata.py  tools.py  version.py  wavdata.py  xdatdata.py
overview/: index.html
references/bindata/: index.html
references/csvdata/: index.html
rsrc/: aboutdialog.ui  mainwindow.ui
search/: search_index.json
(+11 files in other folders)
